fixed gaps

--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ body{
     flex-direction: row;
 }
 
+@media (max-width:720px) { 
+    .homeContainer{
+        flex-direction: column;
+    }
+}
+
 .homeContainer div{
     width: 50vw;
     height: 100%;
@@ -223,4 +229,8 @@ p{
     width: 0vw;
     background-color: var(--mainColor);
     bottom: 0vh;
+}
+
+.gap{
+    height: var(--gap);
 }
